# the_depositum

./: .gitignore  FILES.md  LICENSE  PR_DESCRIPTION.md  README.md  pyproject.toml
.cursor/rules/: data-engineering.mdc  error-handling.mdc
.github/: CODEOWNERS
.github/workflows/: security-audit.yml
data_engineering/: QC_REPORT.md  README.md  __init__.py
data_engineering/audio_post_processing/: README.md  add_intro_outro_to_episodes.sh  process_podcast.py  transcribe_episode.py
data_engineering/config/: pipeline_config.yaml
data_engineering/data_sources/: README.md  canonical_books.py
data_engineering/scripts/: post_process_qc_douay_rheims_dummy_verse_repair.py  post_process_repair_douay_rheims_dummy_verses.py  run_pipeline.py  validate_bible_integrity.py
data_engineering/tests/: test_gutenberg_bible_extract.py
data_final/: 00_00_READ_ME.md  00_Project_Prompt_and_Sources.md  README.md
data_final/bible_commentary_haydock/: Bible_Book_01_Genesis_Commentary.md  Bible_Book_02_Exodus_Commentary.md  Bible_Book_03_Leviticus_Commentary.md  Bible_Book_04_Numbers_Commentary.md  Bible_Book_05_Deuteronomy_Commentary.md  Bible_Book_06_Joshua_Commentary.md  Bible_Book_07_Judges_Commentary.md  Bible_Book_08_Ruth_Commentary.md  Bible_Book_09_1_Samuel_Commentary.md  Bible_Book_10_2_Samuel_Commentary.md  Bible_Book_11_1_Kings_Commentary.md  Bible_Book_12_2_Kings_Commentary.md  Bible_Book_13_1_Chronicles_Commentary.md  Bible_Book_14_2_Chronicles_Commentary.md  Bible_Book_15_Ezra_Commentary.md  Bible_Book_16_Nehemiah_Commentary.md  Bible_Book_17_Tobit_Commentary.md  Bible_Book_18_Judith_Commentary.md  Bible_Book_19_Esther_Commentary.md  Bible_Book_20_1_Maccabees_Commentary.md  (+53 more)
scripts/: security_check.sh
tests/: test_gutenberg_bible_extract.py
(+165 files in other folders)
